feat: add stricter typing for mapper api (#14749)
Co-authored-by: teallarson <teal@airbyte.io>